@@ -68,6 +68,9 @@ Optimizations
 * LUCENE-6218: Don't decode frequencies or match all positions when scoring
   is not needed. (Robert Muir)
 
+* LUCENE-6233 Speed up CheckIndex when the index has term vectors
+  (Robert Muir, Mike McCandless)
+
 API Changes
 
 * LUCENE-6204, LUCENE-6208: Simplify CompoundFormat: remove files()
